# popup-ai

./: .gitignore  404.html  AGENTS.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.beads/: issues.jsonl
docs/: index.md
docs/assets/: .gitkeep
docs/explanation/: architecture.md  index.md  ray-actors.md  video-ocr-proposal.md
docs/how-to/: configure-obs.md  index.md  install-ffmpeg.md  pipeline-subsets.md  tune-transcription.md
docs/reference/: actors.md  cli.md  configuration.md  index.md
docs/tutorials/: admin-ui.md  index.md  obs-setup.md  quickstart.md
explanation/: index.html
explanation/architecture/: index.html
explanation/ray-actors/: index.html
how-to/: index.html
how-to/configure-obs/: index.html
how-to/install-ffmpeg/: index.html
how-to/pipeline-subsets/: index.html
how-to/tune-transcription/: index.html
reference/: index.html
reference/actors/: index.html
reference/cli/: index.html
reference/configuration/: index.html
search/: search_index.json
src/popup_ai/: __init__.py  cli.py  config.py  messages.py  modes.py  observability.py
src/popup_ai/actors/: __init__.py  annotator.py  audio_ingest.py  base.py  diagnostics.py  media_ingest.py  ocr.py  overlay.py  supervisor.py  transcriber.py
src/popup_ai/audio/: __init__.py  converter.py  preprocessor.py
src/popup_ai/ui/: __init__.py  app.py  state.py
src/popup_ai/ui/components/: __init__.py  data_viewer.py  pipeline_bar.py  status_card.py
src/popup_ai/ui/static/: nerdalarm.html  nerdometer.html  overlay.html
src/popup_ai/ui/tabs/: __init__.py  annotator.py  audio_ingest.py  diagnostics.py  ocr.py  overlay.py  overview.py  transcriber.py
tests/: __init__.py  conftest.py  mocks.py  test_actors.py
tutorials/: index.html
tutorials/admin-ui/: index.html
tutorials/obs-setup/: index.html
tutorials/quickstart/: index.html
