[project]
name = "popup-ai"
version = "0.1.0"
description = "Real-time audio transcription and annotation overlay system for live streaming"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Frank Corrao", email = "fcorrao@gmail.com" }]

dependencies = [
    "mlx-whisper>=0.4.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "typer>=0.15",
    "rich>=13.9",
    "ray>=2.40",
    "nicegui>=3.5.0",
]

[project.optional-dependencies]
ui = ["nicegui>=2.9"]
obs = ["obsws-python>=1.7"]
llm = ["pydantic-ai>=0.0.30"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
]
all = ["popup-ai[ui,obs,llm,dev]"]

[project.scripts]
popup-ai = "popup_ai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/popup_ai"]

[tool.hatch.build.targets.sdist]
include = ["src/popup_ai"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]
