[project]
name = "popup-ai"
version = "0.1.0"
description = "Real-time audio transcription and annotation overlay system for live streaming"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Frank Corrao", email = "fcorrao@gmail.com" }]

dependencies = [
    "mlx-whisper>=0.4.3",
    "numpy>=1.26",
    "obsws-python>=1.7",
    "pydantic>=2.10",
    "pydantic-ai>=0.0.30",
    "pydantic-settings>=2.7",
    "pydub>=0.25",
    "audioop-lts>=0.2.1; python_version >= '3.13'", # audioop replacement for Python 3.13+
    "typer>=0.15",
    "rich>=13.9",
    "ray[default]>=2.40",
    "nicegui>=3.5.0",
    "silero-vad>=5.1",
    "logfire>=4.19.0",
    "psutil>=6.0",
    "rapidocr-onnxruntime>=1.4.0",  # OCR engine for video text extraction (default)
    "pytesseract>=0.3.10",  # Alternative OCR engine (requires tesseract binary)
    "pillow>=10.0",  # Image processing for OCR
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
]
all = ["popup-ai[dev]"]

[project.scripts]
popup-ai = "popup_ai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/popup_ai"]

[tool.hatch.build.targets.sdist]
include = ["src/popup_ai"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# NiceGUI uses nested context managers for UI hierarchy - SIM117 doesn't apply
"src/popup_ai/ui/**/*.py" = ["SIM117"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]
